# lagomy

./: .gitignore  README.md  make_report.py  pyproject.toml  test_vision.py
src/lagomy/: crew.py  main.py
src/lagomy/config/: agents.yaml
